# Gitlab-CLI-Companion

./: .env  CONTRIBUTING.md  README.md  dashboard.py  graph.json  pyproject.toml  requirements.txt
glc/: .gitlab-ci.yml  ARCHITECTURE.md  Jenkinsfile  README.md  config.py  dashboard.py  graph.json  main.py
glc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
glc/commands/: docs.py  health.py  migrate.py  review.py  scan.py
glc/graph/: knowledge_graph.py
glc/integrations/: gitlab_api.py
glc/utils/: file_utils.py  git_utils.py
